--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,56 +1,22 @@
 body {
     font-family: 'IBM Plex Mono', monospace;
-    font-family: 'Manrope', sans-serif;
-    background-color: black;
-}
-/*  
-    Fonts   IBM Plex Mono
-            Manrope
-*/
-
-.side {
-    margin: 0 auto;
-    width: 1400px;
-    text-align: center;
-    color: #FFFFFF;
-    background-color: blue;
-    border: solid 1px red;
-}
-
-p {
-    font-family: 'IBM Plex Mono';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 23px;
-    letter-spacing: -0.03em;
-    text-transform: lowercase;
-    color: #FFFFFF;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-header {
-    margin: 0;
+.header {
+    /* margin: 0; */
+    width: 100%;
     height: 765px;
-    border: solid 1px #FFFFFF;
-}
-
-main {
-    margin: 0;
-    border: solid 1px #FFFFFF;
-}
-
-footer {
-    margin: 0;
-    border: solid 1px #FFFFFF;
+    background: linear-gradient(
+        180deg,
+        rgba(0,0,0,0) 0%,
+        rgba(0,0,0,0.5) 100%
+        ); 
+    background-image: url('../resources/header2x.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    /* 
+    */
 }
