--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,19 +4,68 @@ body {
     font-weight: 400;
 }
 
-.header {
-    /* margin: 0; */
+header {
     width: 100%;
     height: 765px;
     background: linear-gradient(
         180deg,
         rgba(0,0,0,0) 0%,
-        rgba(0,0,0,0.5) 100%
-        ); 
-    background-image: url('../resources/header2x.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-    /* 
-    */
+        rgba(0,0,0,0.5) 100%); 
+        background-image: url('../resources/header2x.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 50% 0%;
+}
+    
+header section {
+    margin: 0 auto;
+    width: 1400px;
+    height: 100%;
+    border: dashed 1px yellowgreen;
+}
+    
+.header-menu {
+    margin: 27px 124px auto 123px;
+    height: 55px;
+    border: solid 1px yellow;
+}
+
+p {
+    font-size: 18px;
+    line-height: 23px;
+    letter-spacing: -0.03em;
+    text-transform: lowercase;
+    color: #FFFFFF
+}
+
+.side {
+    margin: 0 auto;
+    width: 1400px;
+    text-align: center;
+    color: green;
+    border: dashed 1px red;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+main {
+    margin: 0;
+    border: solid 1px #FFFFFF;
+}
+
+footer {
+    margin: 0;
+    border: solid 1px #FFFFFF;
+    font-family: 'Manrope', sans-serif; 
 }
