--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,8 @@ body {
     font-family: 'IBM Plex Mono', monospace;
     font-style: normal;
     font-weight: 400;
+    background-color: black;
+    color: #FFFFFF
 }
 
 header {
@@ -47,7 +49,6 @@ p.header-mid {
     font-size: 20px;
     line-height: 26px;
     letter-spacing: -0.03em;
-    color: #FFFFFF;
     background-color: transparent;
 
 }
@@ -68,11 +69,9 @@ h1.header-bottom {
 
 
 
-.side {
+section {
     margin: 0 auto;
     width: 1400px;
-    text-align: center;
-    color: green;
     border: dashed 1px red;
 }
 
