--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,31 +66,100 @@ h1.header-bottom {
     background-color: transparent;
 }
 
+main {
+    margin: 150px 0;
+    border: solid 1px #FFFFFF;
+}
 
+#projects {
+    padding: 0 125px;
+}
 
+#projects h2 {
+    font-size: 55px;
+    line-height: 72px;
+    /* identical to box height */
+    letter-spacing: -0.03em;
+    margin-bottom: 40px;
 
-section {
-    margin: 0 auto;
-    width: 1400px;
-    border: dashed 1px red;
+}
+
+.realhome {
+    width: 100%;
+    height: 550px;
+    position: relative;
+    border-radius: 30px;
+    background: linear-gradient(
+        180deg, 
+        rgba(0, 0, 0, 0) 0%, 
+        rgba(0, 0, 0, 0.9) 100%), 
+        url('../resources/realhome.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: inline-block;
+}
+
+.glass {
+    width: 100%;
+    height: 550px;
+    position: relative;
+    border-radius: 30px;
+    background: linear-gradient(
+        180deg, 
+        rgba(0, 0, 0, 0) 0%, 
+        rgba(0, 0, 0, 0.9) 100%), 
+        url('../resources/glass.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: inline-block;
+}
+
+.fesiyen {
+    width: 100%;
+    height: 550px;
+    position: relative;
+    border-radius: 30px;
+    background: linear-gradient(
+        180deg, 
+        rgba(0, 0, 0, 0) 0%, 
+        rgba(0, 0, 0, 0.9) 100%), 
+        url('../resources/fesiyen.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+        display: inline-block;
 }
 
 
 
 
 
+.project-text {
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    max-width: 510px;
+    background-color: transparent;
+}
 
+#projects h3 {
+    font-size: 35px;
+    line-height: 46px;
+    /* identical to box height */
+    letter-spacing: -0.03em;
+}
 
+#projects p {
+    font-size: 30px;
+    line-height: 39px;
+    /* identical to box height */
+    letter-spacing: -0.03em;
+}
 
-
-
-
-
-
-
-main {
-    margin: 0;
-    border: solid 1px #FFFFFF;
+/* check if section below may be deleted */
+section {
+    margin: 0 auto;
+    width: 1400px;
+    border: dashed 1px red;
 }
 
 footer {
