--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,7 +89,7 @@ main {
     height: 550px;
     position: relative;
     border-radius: 30px;
-    background: linear-gradient(
+    background-image: linear-gradient(
         180deg, 
         rgba(0, 0, 0, 0) 0%, 
         rgba(0, 0, 0, 0.9) 100%), 
@@ -104,7 +104,7 @@ main {
     height: 550px;
     position: relative;
     border-radius: 30px;
-    background: linear-gradient(
+    background-image: linear-gradient(
         180deg, 
         rgba(0, 0, 0, 0) 0%, 
         rgba(0, 0, 0, 0.9) 100%), 
@@ -119,7 +119,7 @@ main {
     height: 550px;
     position: relative;
     border-radius: 30px;
-    background: linear-gradient(
+    background-image: linear-gradient(
         180deg, 
         rgba(0, 0, 0, 0) 0%, 
         rgba(0, 0, 0, 0.9) 100%), 
@@ -128,9 +128,6 @@ main {
         background-size: cover;
         display: inline-block;
 }
-
-
-
 
 
 .project-text {
