--- a/styles/styles.css
+++ b/styles/styles.css
@@ -216,7 +216,7 @@ button:hover {
     margin: 0;
 }
 
-.stack-html::before {
+#stack h3::before {
     margin-bottom: 12px;
     content: "";
     display: block;
@@ -224,56 +224,26 @@ button:hover {
     height: 44px;
     color: #FFFFFF;
     border-radius: 10px;
-    background-image: url('../resources/vector-html-css.png');
     background-size: auto 60%;
     background-repeat: no-repeat;
     background-position: center;
     background-color: #1BFF07;
+}
+
+.stack-html::before {
+    background-image: url('../resources/vector-html-css.png');
 }
 
 .stack-js::before {
-    margin-bottom: 12px;
-    content: "";
-    display: block;
-    width: 45px;
-    height: 44px;
-    color: #FFFFFF;
-    border-radius: 10px;
     background-image: url('../resources/vector-js.png');
-    background-size: auto 60%; 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #1BFF07;
 }
 
 .stack-library::before {
-    margin-bottom: 12px;
-    content: "";
-    display: block;
-    width: 45px;
-    height: 44px;
-    color: #FFFFFF;
-    border-radius: 10px;
     background-image: url('../resources/vector-library.png');
-    background-size: auto 60%; 
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #1BFF07;
 }
 
 .stack-mobile::before {
-    margin-bottom: 12px;
-    content: "";
-    display: block;
-    width: 45px;
-    height: 44px;
-    color: #FFFFFF;
-    border-radius: 10px;
     background-image: url('../resources/vector-mobile.png');
-    background-size: auto 60%;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: #1BFF07;
 }
 
 /* check if section below may be deleted - move declarations to Projects, Stack, Services... */
