--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,68 +80,45 @@ main {
 }
 
 #projects h2 {
+    /* PP */
+    margin-bottom: 38px;
+    /* PP */
+    margin-left: -5px;
     font-size: 55px;
     line-height: 72px;
     /* identical to box height */
     letter-spacing: -0.03em;
-    margin-bottom: 40px;
 
 }
 
-.realhome {
+
+#projects > div {
     width: 100%;
-    height: 550px;
+    /* PP */
+    height: 548px;
     position: relative;
     border-radius: 30px;
     background: linear-gradient(
         180deg, 
         rgba(0, 0, 0, 0) 0%, 
         rgba(0, 0, 0, 0.9) 100%);
-        background-image: url('../resources/realhome.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        display: inline-block;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: inline-block;
 }
 
-.glass {
-    width: 100%;
-    height: 550px;
-    position: relative;
-    border-radius: 30px;
-    background: linear-gradient(
-        180deg, 
-        rgba(0, 0, 0, 0) 0%, 
-        rgba(0, 0, 0, 0.9) 100%);
-        background-image: url('../resources/glass.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        display: inline-block;
-}
-
-.fesiyen {
-    width: 100%;
-    height: 550px;
-    position: relative;
-    border-radius: 30px;
-    background: linear-gradient(
-        180deg, 
-        rgba(0, 0, 0, 0) 0%, 
-        rgba(0, 0, 0, 0.9) 100%); 
-        background-image:url('../resources/fesiyen.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        display: inline-block;
-}
-
-.project-text {
+ .project-text {
     position: absolute;
-    bottom: 50px;
+    /* PP */
+    bottom: 48px;
     left: 50px;
     max-width: 510px;
     background-color: transparent;
 }
 
 #projects h3 {
+    /* PP */
+    padding-bottom: 4px;
     font-size: 35px;
     line-height: 46px;
     /* identical to box height */
@@ -157,6 +134,7 @@ main {
 
 button {
     margin-top: 80px;
+    margin-left: -3px;
     width: 582px;
     height: 153px;
     border-radius: 10px;
@@ -186,7 +164,9 @@ button:hover {
 }
 
 #stack h2 {
-    margin-bottom: 48px;
+    margin-bottom: 45px;
+    /* PP */
+    margin-left: -3px;
     font-size: 55px;
     line-height: 72px;
     /* identical to box height */
@@ -194,6 +174,9 @@ button:hover {
 }
 
 #stack h3 {
+    margin-bottom: 16px;
+    /* PP */
+    margin-left: -2px;
     font-size: 35px;
     line-height: 46px;
     /* identical to box height */
@@ -202,6 +185,8 @@ button:hover {
 }
 
 #stack p {
+    /* PP */
+    margin-left: -2px;
     max-width: 780px;
     font-size: 22px;
     line-height: 29px;
@@ -209,7 +194,8 @@ button:hover {
 }
 
 #stack > div {
-    margin-bottom: 60px;
+    /* PP */
+    margin-bottom: 61px;
 }
 
 #stack > div:last-child {
@@ -217,7 +203,7 @@ button:hover {
 }
 
 #stack h3::before {
-    margin-bottom: 12px;
+    margin-bottom: 13px;
     content: "";
     display: block;
     width: 45px;
