--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,10 +17,10 @@ header {
         180deg,
         rgba(0,0,0,0) 0%,
         rgba(0,0,0,0.5) 100%); 
-        background-image: url('../resources/header2x.jpg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: 50% 0%;
+    background-image: url('../resources/header2x.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 0%;
 }
     
 header section {
@@ -237,12 +237,59 @@ button:hover {
 }
 
 #services h2 {
-    margin-bottom: 74px;
     font-size: 35px;
     line-height: 46px;
     letter-spacing: -0.03em;
     color: #FFFFFF;
 }
+
+#services > div {
+    margin-top: 74px;
+}
+
+#services > div:last-child {
+    margin-top: 137px;
+}
+
+.service-img {
+    width: 100%;
+    height: 200px;
+    border-radius: 30px;
+    display: block;
+/* 
+    background-image: url('../resources/serv-turnkey.jpg');
+*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+}
+
+.service-txt {
+    padding: 40px;
+    width: 100%;
+    height: 283px;
+    border-radius: 30px;
+    background-color: #191C19;
+    display: block;
+    color: #FFFFFF;
+}
+
+#services h3 {
+    font-size: 55px;
+    line-height: 72px;
+    /* identical to box height */
+    letter-spacing: -0.03em;
+    color: #1BFF07;
+}
+
+#services p {
+    max-width: 749px;
+    font-size: 22px;
+    line-height: 29px;
+    letter-spacing: -0.03em;
+}
+
+
 /* check if section below may be deleted - move declarations to Projects, Stack, Services... */
 section {
     margin: 0 auto;
