--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,11 @@ body {
     color: #FFFFFF
 }
 
+section {
+    margin: 0 auto;
+    max-width: 1400px;
+}
+
 header {
     width: 100%;
     height: 765px;
@@ -25,10 +30,8 @@ header {
     
 header section {
     position: relative;
-    margin: 0 auto;
-    width: 1400px;
     height: 100%;
-    border: dashed 1px yellowgreen;
+    border: solid transparent;
 }
     
 .header-menu {
@@ -47,8 +50,9 @@ header section {
 
 p.header-mid {
     position: absolute;
-    left: 125px;
-    bottom: 325px;
+    /* PP */
+    left: 122px;
+    bottom: 323px;
     max-width: 430px;
     font-size: 20px;
     line-height: 26px;
@@ -59,8 +63,9 @@ p.header-mid {
 
 h1.header-bottom {
     position: absolute;
-    left: 118px;
-    bottom: 89px;
+    /* PP */
+    left: 117px;
+    bottom: 85px;
     max-width: 919px;
     font-size: 80px;
     line-height: 70px;
@@ -164,7 +169,7 @@ button:hover {
 }
 
 #stack h2 {
-    margin-bottom: 45px;
+    margin-bottom: 48px;
     /* PP */
     margin-left: -3px;
     font-size: 55px;
@@ -275,6 +280,7 @@ button:hover {
 }
 
 #services h3 {
+    margin-bottom: 15px;
     font-size: 55px;
     line-height: 72px;
     /* identical to box height */
@@ -289,13 +295,10 @@ button:hover {
     letter-spacing: -0.03em;
 }
 
-
-/* check if section below may be deleted - move declarations to Projects, Stack, Services... */
-section {
-    margin: 0 auto;
-    width: 1400px;
-    border: dashed 1px red;
+#services p:last-child {
+    max-width: 724px;
 }
+
 footer {
     margin: 0;
     border: solid 1px #FFFFFF;
