--- a/styles/styles.css
+++ b/styles/styles.css
@@ -238,6 +238,7 @@ button:hover {
 }
 
 #services {
+    margin-bottom: 150px;
     padding: 0 125px;
 }
 
@@ -300,8 +301,74 @@ button:hover {
     max-width: 724px;
 }
 
+#contacts {
+    position: relative;
+    width: 100%;
+    height: 717px;
+    display: block;
+    background-color: #191C19;
+    border-radius: 30px;
+}
+
+#contacts div {
+    width: 310px;
+    position: absolute;
+    bottom: 89px;
+    left: 125px;
+}
+
+#contacts h2 {
+    font-size: 35px;
+    line-height: 60px;
+    /* identical to box height, or 171% */
+    letter-spacing: -0.03em;
+}
+
+#contacts a {
+    margin-top: 20px;
+    font-size: 60px;
+    line-height: 60px;
+    /* identical to box height, or 100% */
+    display: block;
+    letter-spacing: -0.03em;
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+#contacts a:first-child {
+    margin-top: 28px;
+}
+
+#contacts a:hover {
+    opacity: 50%;
+}
+
 footer {
     margin: 0;
-    border: solid 1px #FFFFFF;
-    font-family: 'Manrope', sans-serif; 
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+}
+
+footer section {
+    padding: 78px 125px 0 125px;
+    height: 223px;
+    color: #000000;
+    background-color: #FFFFFF;
+    border-radius: 30px 30px 0 0;
+}
+
+footer h3 {
+    margin-bottom: 66px;
+    font-size: 22px;
+    line-height: 30px;
+    /* identical to box height */
+    letter-spacing: -0.03em;
+}
+
+footer p {
+    font-size: 20px;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+    opacity: 0.5;
 }
