--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,19 +33,58 @@ header section {
     height: 100%;
     border: solid transparent;
 }
-    
-.header-menu {
-    margin: 27px 124px auto 123px;
+
+.header-top {
+    margin: 27px auto auto auto;
+    max-width: 1150px;
     height: 55px;
-    border: solid 1px yellow;
 }
 
-.header-menu p {
+header button {
+    /* PP */
+    margin-top: 6px;
+    margin-left: -4px;
+    width: 130px;
+    height: 39px;
+    border-radius: 100px;
+    background-color: #000000;
+    font-family: 'IBM Plex Mono', monospace;
+    font-style: normal;
+    font-weight: 700;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 42px;
+    line-height: 34px;
+    letter-spacing: -0.11em;
+    text-transform: uppercase;
+    color: #1BFF07;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
+header button:hover {
+    opacity: 50%;
+}
+
+.menu {
+    /* PP */
+    margin-top: 4px;
+    margin-right: 0px;
+    float: right;
+}
+
+.menu a {
+    margin-left: 42px;
     font-size: 18px;
     line-height: 23px;
     letter-spacing: -0.03em;
     text-transform: lowercase;
+    text-decoration: none;
     color: #FFFFFF
+}
+
+.menu a:hover {
+    color: #1BFF07;
 }
 
 p.header-mid {
@@ -64,7 +103,7 @@ p.header-mid {
 h1.header-bottom {
     position: absolute;
     /* PP */
-    left: 117px;
+    left: 115px;
     bottom: 85px;
     max-width: 919px;
     font-size: 80px;
@@ -137,7 +176,7 @@ main {
     letter-spacing: -0.03em;
 }
 
-button {
+main button {
     margin-top: 80px;
     margin-left: -3px;
     width: 582px;
@@ -158,7 +197,7 @@ button {
     transition-duration: 0.4s;
 }
 
-button:hover {
+main button:hover {
     background-color: transparent;
     color: #1BFF07;
 }
@@ -308,6 +347,9 @@ button:hover {
     display: block;
     background-color: #191C19;
     border-radius: 30px;
+    background-image: url('../resources/footer.png');
+    background-position: right;
+    background-repeat: no-repeat;
 }
 
 #contacts div {
