--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body {
 
 section {
     margin: 0 auto;
-    max-width: 1400px;
+    width: 1400px;
 }
 
 header {
@@ -36,7 +36,7 @@ header section {
 
 .header-top {
     margin: 27px auto auto auto;
-    max-width: 1150px;
+    width: 1150px;
     height: 55px;
 }
 
@@ -47,6 +47,7 @@ header button {
     width: 130px;
     height: 39px;
     border-radius: 100px;
+    border: solid 1px #000000;
     background-color: #000000;
     font-family: 'IBM Plex Mono', monospace;
     font-style: normal;
@@ -92,7 +93,7 @@ p.header-mid {
     /* PP */
     left: 122px;
     bottom: 323px;
-    max-width: 430px;
+    width: 430px;
     font-size: 20px;
     line-height: 26px;
     letter-spacing: -0.03em;
@@ -105,7 +106,7 @@ h1.header-bottom {
     /* PP */
     left: 115px;
     bottom: 85px;
-    max-width: 919px;
+    width: 919px;
     font-size: 80px;
     line-height: 70px;
     /* or 88% */
@@ -156,7 +157,7 @@ main {
     /* PP */
     bottom: 48px;
     left: 50px;
-    max-width: 510px;
+    width: 510px;
     background-color: transparent;
 }
 
@@ -231,7 +232,7 @@ main button:hover {
 #stack p {
     /* PP */
     margin-left: -2px;
-    max-width: 780px;
+    width: 780px;
     font-size: 22px;
     line-height: 29px;
     letter-spacing: -0.03em;
@@ -330,20 +331,22 @@ main button:hover {
 }
 
 #services p {
-    max-width: 749px;
+    width: 749px;
     font-size: 22px;
     line-height: 29px;
     letter-spacing: -0.03em;
 }
 
 #services p:last-child {
-    max-width: 724px;
+    width: 724px;
 }
 
 #contacts {
+/* 
     position: relative;
+     */
     width: 100%;
-    height: 717px;
+    /* height: 717px; */
     display: block;
     background-color: #191C19;
     border-radius: 30px;
@@ -353,8 +356,13 @@ main button:hover {
 }
 
 #contacts div {
-    width: 310px;
+/* 
     position: absolute;
+ */
+    margin: 0 auto;
+    width: 1400px;
+    padding: 320px 125px 89px 125px;
+    height: 717px;
     bottom: 89px;
     left: 125px;
 }
@@ -391,14 +399,14 @@ footer {
     font-family: 'Manrope', sans-serif;
     font-style: normal;
     font-weight: 400;
-}
-
-footer section {
-    padding: 78px 125px 0 125px;
     height: 223px;
     color: #000000;
     background-color: #FFFFFF;
     border-radius: 30px 30px 0 0;
+}
+
+footer section {
+    padding: 78px 125px 0 125px;
 }
 
 footer h3 {
