--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,23 +28,21 @@ header {
     background-size: cover;
     background-position: 50% 0%;
 }
-    
+
 header section {
-    position: relative;
+    padding: 26px 124px 94px 123px;
     height: 100%;
     border: solid transparent;
 }
 
 .header-top {
-    margin: 27px auto auto auto;
-    width: 1150px;
     height: 55px;
 }
 
 header button {
     /* PP */
     margin-top: 6px;
-    margin-left: -4px;
+    margin-left: -8px;
     width: 130px;
     height: 39px;
     border-radius: 100px;
@@ -71,7 +69,7 @@ header button:hover {
 .menu {
     /* PP */
     margin-top: 4px;
-    margin-right: 0px;
+    margin-right: -3px;
     float: right;
 }
 
@@ -89,31 +87,23 @@ header button:hover {
     color: #1BFF07;
 }
 
-p.header-mid {
-    position: absolute;
-    /* PP */
-    left: 122px;
-    bottom: 323px;
+header p {
+    margin-top: 252px;
     width: 430px;
     font-size: 20px;
     line-height: 26px;
     letter-spacing: -0.03em;
-    background-color: transparent;
-
 }
 
-h1.header-bottom {
-    position: absolute;
-    /* PP */
-    left: 115px;
-    bottom: 85px;
+header h1 {
+    margin-top: 27px;
+    margin-left: -7px;
     width: 919px;
     font-size: 80px;
     line-height: 70px;
     /* or 88% */
     letter-spacing: -0.03em;
-    color: #1BFF07;
-    background-color: transparent;
+    color: #1BFF07; 
 }
 
 main {
