--- a/styles/styles.css
+++ b/styles/styles.css
@@ -369,6 +369,7 @@ main button:hover {
 
 #contacts a {
     margin-top: 20px;
+    width: 310px;
     font-size: 60px;
     line-height: 60px;
     /* identical to box height, or 100% */
