--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,38 +37,41 @@ header section {
 
 .header-top {
     height: 55px;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
 }
 
-header button {
-    /* PP */
+.logo {
     margin-top: 6px;
-    margin-left: -8px;
+    margin-left: -4px;
     width: 130px;
     height: 39px;
     border-radius: 100px;
     border: solid 1px #000000;
     background-color: #000000;
-    font-family: 'IBM Plex Mono', monospace;
-    font-style: normal;
-    font-weight: 700;
-    text-align: center;
-    vertical-align: middle;
-    font-size: 42px;
-    line-height: 34px;
-    letter-spacing: -0.11em;
-    text-transform: uppercase;
-    color: #1BFF07;
     cursor: pointer;
     transition-duration: 0.4s;
 }
 
-header button:hover {
+.logo a {
+    padding-left: 8px;
+    font-weight: 700;
+    font-size: 42px;
+    line-height: 37px;
+    letter-spacing: -0.11em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #1BFF07;
+}
+
+.logo:hover {
     opacity: 50%;
 }
 
 .menu {
     /* PP */
-    margin-top: 4px;
+    margin-top: 3px;
     margin-right: -3px;
     float: right;
 }
@@ -80,15 +83,16 @@ header button:hover {
     letter-spacing: -0.03em;
     text-transform: lowercase;
     text-decoration: none;
-    color: #FFFFFF
+    color: #FFFFFF;
 }
-
+    
 .menu a:hover {
     color: #1BFF07;
 }
 
 header p {
-    margin-top: 252px;
+    margin-top: 251px;
+    margin-left: -1px;
     width: 430px;
     font-size: 20px;
     line-height: 26px;
